src/styles/Stretching.css
.stretching-block {
  margin-bottom: 10%;
}

.stretching-block h1 {
  text-align: center;
  margin-top: 5%;
  margin-bottom: 2%;
}

.stretching-image-wrapper {
  width: 20%;
  height: 300px;
}

.stretching-image {
  object-fit: cover;
}

.player-wrapper {
  /* position: relative; */
  width: 20%;
  height: 300px;
  overflow: hidden;
}

.stretching-title {
  text-align: center;
  color: black;
  font-size: 30px;
  height: 20px;
}

